<resources xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <!-- App Name -->
    <string name="app_name">Snake</string>

    <!-- Activity Main -->
    <string name="singleplayer">Singleplayer</string>
    <string name="multiplayer">Multiplayer</string>
    <string name="exit">Exit</string>

    <!-- Activity Bluetooth Search -->
    <string name="bt_textView_header">Suche nach verf\u00FCgbaren Ger\u00E4ten</string>
    <string name="scanning">Suche\u002E\u002E</string>
    <string name="select_device">Ger\u00E4t ausw\u00E4hlen</string>
    <string name="bt_new_devices">Verf\u00FCgbare Ger\u00E4te</string>
    <string name="bt_paired_devices">Gepaarte Ger\u00E4te</string>
    <string name="no_devices">Keine Ger\u00E4te gefunden</string>
    <string name="bt_not_available">"Bluetooth ist nicht verf\u00FCgbar"</string>
    <string name="start_search">Suche starten</string>

    <!-- Activity Multiplayer -->
    <string name="lets_go">Los Gehts\u0021</string>
    <string name="select_level">Level</string>
    <string name="wait_for_dude">Warten auf Mitspieler\u002E\u002E\u002E</string>
    <string name="no_dude_selected">Mit keinem Spieler Verbunden</string>
    <string name="title_connected_to">verbunden mit <xliff:g id="device_name">%1$s</xliff:g></string>
    <string name="not_discoverable">Du bist f\u00FCr andere nicht sichtbar</string>
    <string name="error_leave_app">Fehler bei der Verbindung\u002C Verlasse Multiplayer</string>
    <string name="no_device_selected">Kein Ger\u00E4t ausgew\u00E4hlt</string>
    <string name="not_connected">Verbindung getrennt</string>
    <string name="could_not_connect">Konnte keine Verbindung zum Ger\u00E4t herstellen</string>
    <string name="bt_turned_on">Bluetooth wurde aktiviert</string>

    <string name="difficulty">Schwierigkeitsgrad:\u0020</string>
    <string name="easy">Leicht</string>
    <string name="medium">Mittel</string>
    <string name="hard">Schwer</string>
    <string name="dude_chose"><xliff:g id="device_name">%1$s</xliff:g> w\u00E4hlte\u0020</string>

</resources>
