<!--<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
    <!--xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"-->
    <!--android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"-->
    <!--android:paddingRight="@dimen/activity_horizontal_margin"-->
    <!--android:paddingTop="@dimen/activity_vertical_margin"-->
    <!--android:paddingBottom="@dimen/activity_vertical_margin"-->
    <!--tools:context="de.hft.stuttgart.strawberry.activities.BluetoothActivity">-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/bt_header_text"
        android:text="@string/bt_textView_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dim_foreground_disabled_material_dark"
        android:paddingStart="10sp"
        android:paddingTop="10sp"
        android:paddingBottom="10sp"
        android:paddingEnd="5sp"
        android:textColor="#000"
        android:textSize="18sp" />
    
    <TextView
        android:id="@+id/header_paired_devices"
        android:text="@string/bt_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dim_foreground_disabled_material_light"
        android:paddingStart="18sp"
        android:paddingEnd="5sp"
        android:visibility="visible"
        android:textColor="#fff"
        android:textSize="16sp" />

    <ListView
        android:id="@+id/lv_paired_devices"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/switch_thumb_normal_material_dark"
        android:stackFromBottom="false"
        android:layout_marginTop="15sp" />

    <TextView
        android:id="@+id/header_new_devices"
        android:text="@string/bt_new_devices"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/dim_foreground_disabled_material_light"
        android:paddingStart="18sp"
        android:paddingEnd="5sp"
        android:visibility="visible"
        android:textColor="#fff"
        android:textSize="16sp" />

    <ListView
        android:id="@+id/lv_new_devices"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:background="@color/switch_thumb_normal_material_dark"
        android:stackFromBottom="false"
        android:layout_marginTop="15sp" />

    <Button
        android:id="@+id/btn_scan"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/buttonshape"
        android:shadowColor="#525252"
        android:shadowDx="0"
        android:shadowDy="0"
        android:shadowRadius="5"
        android:text="@string/start_search"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        />

</LinearLayout>
